--- a/help.html
+++ b/help.html
@@ -30,7 +30,7 @@
           waarop we varen zijn gemaakt van ditzelfde gerecyclede plastic!
         </p>
         <div>
-          <a href="https://plasticwhale.com/booking/">book nu!</a>
+          <a href="https://plasticwhale.com/booking/">boek nu!</a>
         </div>
       </section>
       <img src="images/just.png" alt="" class="bodem-afbeelding" />
