--- a/verhaal.html
+++ b/verhaal.html
@@ -19,7 +19,7 @@
         <h1>Ons verhaal!</h1>
 
         <section>
-          <h2>Onze Oprichting en Missie</h2>
+          <h2>Onze Oorsprong en Missie</h2>
           <p>
             Plastic Whale is opgericht in 2011 door Marius Smit met als doel
             plastic vervuiling tegen te gaan. Smit heeft veel rondgereisd en
