--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
 
         <p>
-          Wij zijn gedreven vrijwilligers, natuurliefhebbers en duurzaamheid
+          Wij zijn gedreven vrijwilligers, natuurliefhebbers en duurzaamheids
           experts die zich inzetten voor plastic vrije oceanen en voor het
           creëren van bewustzijn over de invloed van plastic op het milieu. Met
           onze opruimacties proberen wij men te stimuleren om bij te dragen aan
