--- a/verhaal.html
+++ b/verhaal.html
@@ -31,9 +31,7 @@
           <h2>De Impact van Plastic Vervuiling</h2>
           <p>
             Plastic is een van de meest schadelijke stoffen waarmee dieren in
-            aanraking komen. Het beschadigt de leefomgeving en kost miljoenen
-            dieren het leven doordat ze het onbedoeld consumeren. Hier wilde hij
-            graag verandering in brengen beginnend in Nederland.
+            aanraking komen. Het beschadigt de leefomgeving en kost miljoenen dieren het leven doordat ze het onbedoeld consumeren. Hier wilde hij graag verandering in brengen, beginnend in Nederland.
           </p>
         </section>
 
